# PegSolitaire

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-release.bat  create-release.ps1  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: ci.yml  release.yml  windows-release.yml
controllers/: BoardController.cpp  BoardController.h  HomePageController.cpp  HomePageController.h  SettingsPageController.cpp  SettingsPageController.h  StartPageController.cpp  StartPageController.h  StrategyWorker.cpp
models/: Board.cpp  Board.h  BoardSetup.cpp  GridBoard.cpp  GridBoard.h  OffsetGridBoard.cpp  OffsetGridBoard.h
packaging/: Info.plist.in  README.md  build-linux.sh  build-macos.sh  build-windows.bat  pegsolitaire.desktop  windows-installer.nsi
prompts/: 01-init.md  03-settings.md  04-gamemodes.md  05-buttonUI.md  06-gameUI.md  07-winandlose.md  08-keyboard.md  09-selection.md  10-anti.md  11-strategy.md  12-information.md  13-optimize.md  14-loading.md  15-endgame.md  init.md  start.md
report/: main.tex
report/content/: 00-titlepage.tex  01-introduction.tex  02-the-peg-solitaire-game.tex  03-lessons-learned.tex  04-summary.tex
report/preamble/: packages.tex
report/resource/: references.bib
resources/: resources.qrc
src/: CMakeLists.txt  mainwindow.h
src/controllers/: HomePageController.cpp  HomePageController.h  SettingsPageController.cpp  StrategyWorker.h
src/models/: Board.h
src/resources/: resources.qrc
src/utils/: ButtonStyles.cpp
src/views/: BoardView.cpp  GameView.cpp  LoadingCircle.cpp  LoadingCircle.h  SettingsPageView.cpp  SettingsPageView.h  StartPageView.cpp
utils/: ButtonStyles.h
views/: BoardView.cpp  BoardView.h  GameView.cpp  GameView.h  HomePageView.cpp  HomePageView.h  SettingsPageView.cpp  StartPageView.cpp  StartPageView.h
